--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -239,25 +239,20 @@ FONT 8, "MS Sans Serif"
 BEGIN
     LISTBOX         IDC_PROGRAMLIST,2,3,104,153,LBS_NOINTEGRALHEIGHT | 
                     WS_VSCROLL | WS_TABSTOP
-    GROUPBOX        "Setup",IDC_STATIC,116,3,217,51
     CONTROL         "Keyed Numbers are channels not postions (US Style)",
                     IDC_CUTOMCHANNELORDER,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,124,17,195,8
     COMBOBOX        IDC_COUNTRY,121,35,152,75,CBS_DROPDOWNLIST | WS_VSCROLL | 
                     WS_TABSTOP
     PUSHBUTTON      "Scan",IDC_SCAN,282,35,43,13
-    GROUPBOX        "Details",IDC_STATIC,115,55,218,103
-    LTEXT           "Name",IDC_STATIC,121,68,46,8
     EDITTEXT        IDC_NAME,173,65,153,14,ES_AUTOHSCROLL
-    LTEXT           "Frequency",IDC_STATIC,120,86,44,10
-    EDITTEXT        IDC_FREQUENCY,173,83,126,14,ES_AUTOHSCROLL | WS_DISABLED
+    EDITTEXT        IDC_FREQUENCY,173,84,45,12,ES_AUTOHSCROLL
+    PUSHBUTTON      "Set",IDC_SETFREQ,252,84,43,12
     SCROLLBAR       IDC_FINETUNE,304,84,22,13
-    LTEXT           "Channel",IDC_STATIC,121,104,48,12
     COMBOBOX        IDC_CHANNEL,174,102,47,107,CBS_DROPDOWN | WS_VSCROLL | 
                     WS_TABSTOP
     CONTROL         "Active",IDC_ACTIVE,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,229,102,93,12
-    LTEXT           "Format",IDC_STATIC,121,123,40,11
     COMBOBOX        IDC_FORMAT,173,120,152,73,CBS_DROPDOWNLIST | WS_VSCROLL | 
                     WS_TABSTOP
     PUSHBUTTON      "Copy",IDC_ADD,123,139,43,13
@@ -266,6 +261,13 @@ BEGIN
     PUSHBUTTON      "Down",IDC_DOWN,273,139,43,13
     DEFPUSHBUTTON   "OK",IDOK,1,165,43,13,WS_GROUP
     PUSHBUTTON      "Cancel",IDCANCEL,49,165,43,13,WS_GROUP
+    GROUPBOX        "Setup",IDC_STATIC,116,3,217,51
+    GROUPBOX        "Details",IDC_STATIC,115,55,218,103
+    LTEXT           "Name",IDC_STATIC,121,68,46,8
+    LTEXT           "Frequency",IDC_STATIC,120,86,44,10
+    LTEXT           "Channel",IDC_STATIC,121,104,48,12
+    LTEXT           "Format",IDC_STATIC,121,123,40,11
+    LTEXT           "MHz",IDC_STATIC,224,86,16,8
 END
 
 IDD_SPLASHBOX DIALOGEX 0, 0, 145, 192
