--- a/DSRend/DSRend.rc
+++ b/DSRend/DSRend.rc
@@ -148,7 +148,7 @@ END
 STRINGTABLE DISCARDABLE 
 BEGIN
     IDS_PROJNAME            "DSRend"
-    IDS_TITLEDSRendQualityPage "Title"
+    IDS_TITLEDSRendQualityPage "Statistics"
     IDS_HELPFILEDSRendQualityPage "Help File Name"
     IDS_DOCSTRINGDSRendQualityPage "Your Help String"
 END
